fix text wrap for title

--- a/styles/idea.module.css
+++ b/styles/idea.module.css
@@ -17,7 +17,6 @@ opacity: 1;
 }
 
 .title{
-  overflow: hidden;
   height: 57px;  
 }
 
